--- a/GUI/MainWindow/MainWindow.ui
+++ b/GUI/MainWindow/MainWindow.ui
@@ -47,7 +47,7 @@
      <x>0</x>
      <y>0</y>
      <width>1008</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -58,11 +58,14 @@
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
     <addaction name="separator"/>
+    <addaction name="actionImport_Labjack_Data"/>
+    <addaction name="separator"/>
     <addaction name="actionExport_to"/>
     <addaction name="separator"/>
     <addaction name="actionSettings"/>
     <addaction name="separator"/>
     <addaction name="actionExit_Application"/>
+    <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -482,6 +485,11 @@
    </property>
    <property name="toolTip">
     <string>Export to file...</string>
+   </property>
+  </action>
+  <action name="actionImport_Labjack_Data">
+   <property name="text">
+    <string>Import Labjack Data...</string>
    </property>
   </action>
  </widget>
