Improved label rending on macOS

--- a/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget_ContentsExpanded.ui
+++ b/GUI/UI/TimelineHeaderWidget/TimelineHeaderWidget_ContentsExpanded.ui
@@ -52,10 +52,16 @@ color:rgb(243, 243, 243);
       <item>
        <widget class="QLabel" name="lblTitle">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>13</height>
+         </size>
         </property>
         <property name="font">
          <font>
