Refactored some windows into a GUI/Windows folder

--- a/GUI/Windows/VideoPlayer/VideoPlayerWidget.ui
+++ b/GUI/Windows/VideoPlayer/VideoPlayerWidget.ui
@@ -610,18 +610,18 @@
   <customwidget>
    <class>VideoFrame</class>
    <extends>QFrame</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
    <container>1</container>
   </customwidget>
   <customwidget>
    <class>HighlightedJumpSlider</class>
    <extends>QSlider</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
   </customwidget>
   <customwidget>
    <class>ToggleButton</class>
    <extends>QPushButton</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
   </customwidget>
  </customwidgets>
  <resources/>
