--- a/GUI/Windows/VideoPlayer/MainVideoPlayerWindow_Old.ui
+++ b/GUI/Windows/VideoPlayer/MainVideoPlayerWindow_Old.ui
@@ -863,28 +863,28 @@
   <customwidget>
    <class>VideoFrame</class>
    <extends>QFrame</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
    <container>1</container>
   </customwidget>
   <customwidget>
    <class>HighlightedJumpSlider</class>
    <extends>QSlider</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
   </customwidget>
   <customwidget>
    <class>TimestampTableView</class>
    <extends>QTableView</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
   </customwidget>
   <customwidget>
    <class>PlainTextEdit</class>
    <extends>QPlainTextEdit</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
   </customwidget>
   <customwidget>
    <class>ToggleButton</class>
    <extends>QPushButton</extends>
-   <header>GUI.UI.VideoPlayer</header>
+   <header>GUI.Windows.VideoPlayer</header>
   </customwidget>
  </customwidgets>
  <resources/>
