--- a/GUI/MainObjectListsWindow/MainObjectListsWindow.ui
+++ b/GUI/MainObjectListsWindow/MainObjectListsWindow.ui
@@ -82,12 +82,20 @@
                 <property name="text">
                  <string>Load</string>
                 </property>
+                <property name="icon">
+                 <iconset resource="../../data/PhoPyQtTimelinePlotterResourceFile.qrc">
+                  <normaloff>:/fugue/fugue/icons-shadowless/document-import.png</normaloff>:/fugue/fugue/icons-shadowless/document-import.png</iconset>
+                </property>
                </widget>
               </item>
               <item>
                <widget class="QToolButton" name="toolButton_SaveSelected">
                 <property name="text">
                  <string>Save</string>
+                </property>
+                <property name="icon">
+                 <iconset resource="../../data/PhoPyQtTimelinePlotterResourceFile.qrc">
+                  <normaloff>:/fugue/fugue/icons-shadowless/document-export.png</normaloff>:/fugue/fugue/icons-shadowless/document-export.png</iconset>
                 </property>
                </widget>
               </item>
@@ -222,6 +230,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../data/PhoPyQtTimelinePlotterResourceFile.qrc"/>
+ </resources>
  <connections/>
 </ui>
