--- a/GUI/UI/DialogComponents/ListLockableEditButtons_DialogComponents.ui
+++ b/GUI/UI/DialogComponents/ListLockableEditButtons_DialogComponents.ui
@@ -10,6 +10,30 @@
     <height>19</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>70</width>
+    <height>19</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>22</height>
+   </size>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>70</width>
+    <height>19</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>ListLockableEditButtons_DialogComponents</string>
   </property>
