--- a/GUI/UI/DialogComponents/LockableList.ui
+++ b/GUI/UI/DialogComponents/LockableList.ui
@@ -81,7 +81,7 @@
           <widget class="QListView" name="listView"/>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="label">
+          <widget class="QLabel" name="lblListTitle">
            <property name="text">
             <string>List Title</string>
            </property>
