--- a/GUI/UI/DialogComponents/LockableList.ui
+++ b/GUI/UI/DialogComponents/LockableList.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>374</width>
     <height>300</height>
    </rect>
   </property>
@@ -78,10 +78,58 @@
           <number>0</number>
          </property>
          <item row="1" column="0">
-          <widget class="QListView" name="listView"/>
+          <widget class="QFrame" name="frame_main_content">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Raised</enum>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_4">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <item row="0" column="0">
+             <widget class="QListView" name="listView"/>
+            </item>
+            <item row="1" column="0">
+             <widget class="QTableView" name="tableView"/>
+            </item>
+           </layout>
+          </widget>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="lblListTitle">
+           <property name="minimumSize">
+            <size>
+             <width>90</width>
+             <height>13</height>
+            </size>
+           </property>
+           <property name="baseSize">
+            <size>
+             <width>90</width>
+             <height>13</height>
+            </size>
+           </property>
            <property name="text">
             <string>List Title</string>
            </property>
@@ -136,7 +184,7 @@
           <widget class="ListLockableEditButtons_DialogComponents" name="listLockableEditWidget" native="true">
            <property name="minimumSize">
             <size>
-             <width>0</width>
+             <width>90</width>
              <height>19</height>
             </size>
            </property>
@@ -148,7 +196,7 @@
            </property>
            <property name="baseSize">
             <size>
-             <width>0</width>
+             <width>90</width>
              <height>19</height>
             </size>
            </property>
