--- a/GUI/UI/DialogComponents/LockableList.ui
+++ b/GUI/UI/DialogComponents/LockableList.ui
@@ -111,7 +111,20 @@
              <widget class="QListView" name="listView"/>
             </item>
             <item row="1" column="0">
-             <widget class="QTableView" name="tableView"/>
+             <widget class="QTableView" name="tableView">
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>120</height>
+               </size>
+              </property>
+              <property name="baseSize">
+               <size>
+                <width>100</width>
+                <height>120</height>
+               </size>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
