Enabled table cell editing behaviors based on whether the list is locked or editable.

--- a/GUI/UI/DialogComponents/LockableList.ui
+++ b/GUI/UI/DialogComponents/LockableList.ui
@@ -124,6 +124,9 @@
                 <height>120</height>
                </size>
               </property>
+              <property name="editTriggers">
+               <set>QAbstractItemView::NoEditTriggers</set>
+              </property>
              </widget>
             </item>
            </layout>
