--- a/GUI/MainObjectListsWindow/MainObjectListsWindow.ui
+++ b/GUI/MainObjectListsWindow/MainObjectListsWindow.ui
@@ -54,13 +54,6 @@
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
-          <widget class="QPushButton" name="pushButton_AddSearchDirectory">
-           <property name="text">
-            <string>Add Search Directory</string>
-           </property>
-          </widget>
-         </item>
-         <item>
           <widget class="QFrame" name="frame_2">
            <property name="minimumSize">
             <size>
@@ -83,7 +76,7 @@
                  <string>Load</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../data/PhoPyQtTimelinePlotterResourceFile.qrc">
+                 <iconset>
                   <normaloff>:/fugue/fugue/icons-shadowless/document-import.png</normaloff>:/fugue/fugue/icons-shadowless/document-import.png</iconset>
                 </property>
                </widget>
@@ -94,7 +87,7 @@
                  <string>Save</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../data/PhoPyQtTimelinePlotterResourceFile.qrc">
+                 <iconset>
                   <normaloff>:/fugue/fugue/icons-shadowless/document-export.png</normaloff>:/fugue/fugue/icons-shadowless/document-export.png</iconset>
                 </property>
                </widget>
@@ -157,10 +150,51 @@
            </column>
           </widget>
          </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QPushButton" name="pushButton_AddSearchDirectory">
+             <property name="text">
+              <string>Add Search Directory</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QToolButton" name="btnReload">
+             <property name="toolTip">
+              <string>Reload</string>
+             </property>
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset theme="SP_BrowserReload">
+               <normaloff>.</normaloff>.</iconset>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
         </layout>
        </widget>
       </widget>
-      <widget class="QFrame" name="frame">
+      <widget class="QFrame" name="frameBottom">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
        </property>
@@ -194,7 +228,7 @@
      <x>0</x>
      <y>0</y>
      <width>500</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
